# compiler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  a.c  a.s  sim.py  xmake.lua
.github/workflows/: sync.yml
src/: CMakeLists.txt  main.cpp
tests/: test.cpp  xmake.lua
